<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.newLandmark.NewLandmarkFragment">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <ImageView
            android:id="@+id/marker"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/marker_content_description"
            app:srcCompat="@drawable/ic_twotone_location_on_48px" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/instrictionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000"
                android:textSize="18sp"
                tools:text="@string/instruction_location_title" />

            <TextView
                android:id="@+id/instructionSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                tools:text="@string/instruction_subtitle" />

            <SeekBar
                android:id="@+id/radiusBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:max="4"
                android:progress="2" />

            <TextView
                android:id="@+id/radiusDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                tools:text="100 meters" />

            <EditText
                android:id="@+id/landmarkName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/name_hint"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/landmarkHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/hint_hint"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/continue_description" />
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>